--- a/tp2/ej2/.project
+++ b/tp2/ej2/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>primos-ej2</name>
-	<comment>Project ej2 created by Buildship.</comment>
+	<name>primes-ej2</name>
+	<comment>Project ej22 created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1756992431939</id>
+			<id>1757117924180</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
